Update dependencies to fix security vulnerabilities
- Spring Boot 3.2.0 -> 3.3.5
- MySQL connector: mysql-connector-java 8.0.33 -> mysql-connector-j 9.1.0
- Dependency Management plugin 1.1.4 -> 1.1.7

Resolves GitHub security alerts (41 vulnerabilities)
Tested: Application starts successfully and all endpoints working

--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -2,8 +2,8 @@ import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.3.5'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.base14.demo'
@@ -50,7 +50,7 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
     // Database
-    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
+    runtimeOnly 'com.mysql:mysql-connector-j:9.1.0'
 
     // Test dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
