--- a/nodejs/express-typescript-mongodb/package.json
+++ b/nodejs/express-typescript-mongodb/package.json
@@ -67,6 +67,9 @@
     "winston": "^3.17.0",
     "zod": "^4.1.13"
   },
+  "overrides": {
+    "qs": "^6.14.1"
+  },
   "devDependencies": {
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
