--- a/nodejs/express5-postgres/package.json
+++ b/nodejs/express5-postgres/package.json
@@ -36,7 +36,7 @@
     "bcrypt": "^5.1.1",
     "bullmq": "^5.34.8",
     "drizzle-orm": "^0.38.3",
-    "express": "^5.0.1",
+    "express": "^5.2.1",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
@@ -44,6 +44,10 @@
     "pino-pretty": "^13.0.0",
     "socket.io": "^4.8.3",
     "zod": "^3.24.1"
+  },
+  "overrides": {
+    "qs": "^6.14.1",
+    "esbuild": "^0.27.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -55,9 +59,9 @@
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.17.0",
     "socket.io-client": "^4.8.3",
-    "tsx": "^4.19.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.1",
-    "vitest": "^2.1.8"
+    "vitest": "^4.0.16"
   }
 }
