--- a/nodejs/nestjs-postgres/package.json
+++ b/nodejs/nestjs-postgres/package.json
@@ -66,6 +66,9 @@
     "winston": "^3.19.0",
     "zod": "^4.2.1"
   },
+  "overrides": {
+    "qs": "^6.14.1"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
