Update Node.js projects: fix security vulnerabilities, update OpenTelemetry to 0.210.0, add log export to nextjs-api-mongodb

--- a/nodejs/express5-postgres/compose.yml
+++ b/nodejs/express5-postgres/compose.yml
@@ -122,6 +122,7 @@ services:
       - SCOUT_CLIENT_ID=${SCOUT_CLIENT_ID:-}
       - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET:-}
       - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL:-}
+      - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
     networks:
       - app-network
 
