--- a/nodejs/express-typescript-mongodb/package.json
+++ b/nodejs/express-typescript-mongodb/package.json
@@ -33,20 +33,20 @@
   "license": "MIT",
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "^0.208.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.67.2",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.208.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.208.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
-    "@opentelemetry/instrumentation-express": "^0.57.0",
-    "@opentelemetry/instrumentation-http": "^0.208.0",
-    "@opentelemetry/instrumentation-ioredis": "^0.56.0",
-    "@opentelemetry/instrumentation-mongodb": "^0.61.0",
-    "@opentelemetry/instrumentation-mongoose": "^0.55.0",
-    "@opentelemetry/instrumentation-winston": "^0.53.0",
+    "@opentelemetry/api-logs": "^0.210.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.68.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.210.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.210.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.210.0",
+    "@opentelemetry/instrumentation-express": "^0.58.0",
+    "@opentelemetry/instrumentation-http": "^0.210.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.58.0",
+    "@opentelemetry/instrumentation-mongodb": "^0.63.0",
+    "@opentelemetry/instrumentation-mongoose": "^0.56.0",
+    "@opentelemetry/instrumentation-winston": "^0.54.0",
     "@opentelemetry/resources": "^2.2.0",
-    "@opentelemetry/sdk-logs": "^0.208.0",
-    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/sdk-logs": "^0.210.0",
+    "@opentelemetry/sdk-node": "^0.210.0",
     "@opentelemetry/semantic-conventions": "^1.29.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
@@ -59,7 +59,7 @@
     "express": "^5.0.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "ioredis": "^5.4.2",
+    "ioredis": "^5.9.1",
     "isomorphic-dompurify": "^2.33.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.1",
@@ -68,7 +68,10 @@
     "zod": "^4.1.13"
   },
   "overrides": {
-    "qs": "^6.14.1"
+    "qs": "^6.14.1",
+    "tmp": ">=0.2.4",
+    "diff": ">=8.0.3",
+    "ioredis": "^5.9.1"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
@@ -94,8 +97,5 @@
   },
   "engines": {
     "node": ">=24.0.0"
-  },
-  "overrides": {
-    "tmp": ">=0.2.4"
   }
 }
