--- a/nodejs/nestjs-postgres/package.json
+++ b/nodejs/nestjs-postgres/package.json
@@ -33,22 +33,22 @@
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.10",
-    "@opentelemetry/api-logs": "^0.208.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.67.3",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.208.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.208.0",
-    "@opentelemetry/exporter-prometheus": "^0.208.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
-    "@opentelemetry/instrumentation-express": "^0.57.1",
-    "@opentelemetry/instrumentation-http": "^0.208.0",
-    "@opentelemetry/instrumentation-ioredis": "^0.57.0",
-    "@opentelemetry/instrumentation-nestjs-core": "^0.55.0",
-    "@opentelemetry/instrumentation-pg": "^0.61.2",
-    "@opentelemetry/instrumentation-winston": "^0.53.0",
+    "@opentelemetry/api-logs": "^0.210.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.68.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.210.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.210.0",
+    "@opentelemetry/exporter-prometheus": "^0.210.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.210.0",
+    "@opentelemetry/instrumentation-express": "^0.58.0",
+    "@opentelemetry/instrumentation-http": "^0.210.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.58.0",
+    "@opentelemetry/instrumentation-nestjs-core": "^0.56.0",
+    "@opentelemetry/instrumentation-pg": "^0.62.0",
+    "@opentelemetry/instrumentation-winston": "^0.54.0",
     "@opentelemetry/resources": "^2.2.0",
-    "@opentelemetry/sdk-logs": "^0.208.0",
+    "@opentelemetry/sdk-logs": "^0.210.0",
     "@opentelemetry/sdk-metrics": "^2.2.0",
-    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/sdk-node": "^0.210.0",
     "@opentelemetry/semantic-conventions": "^1.38.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.66.2",
@@ -67,7 +67,9 @@
     "zod": "^4.2.1"
   },
   "overrides": {
-    "qs": "^6.14.1"
+    "qs": "^6.14.1",
+    "diff": ">=8.0.3",
+    "test-exclude": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
