--- a/nodejs/nestjs-postgres/package.json
+++ b/nodejs/nestjs-postgres/package.json
@@ -69,7 +69,8 @@
   "overrides": {
     "qs": "^6.14.1",
     "diff": ">=8.0.3",
-    "test-exclude": "^7.0.1"
+    "test-exclude": "^7.0.1",
+    "lodash": "^4.17.22"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
