--- a/rust/axum-postgres/Cargo.toml
+++ b/rust/axum-postgres/Cargo.toml
@@ -57,7 +57,8 @@ serde_json = "1.0"
 
 # Utilities
 uuid = { version = "1.19.0", features = ["v4", "serde"] }
-time = { version = "0.3", features = ["serde", "formatting", "macros"] }
+bytes = "1.11.1"
+time = { version = "0.3.47", features = ["serde", "formatting", "macros"] }
 thiserror = "2.0.17"
 anyhow = "1.0.100"
 dotenvy = "0.15"
