--- a/nodejs/hono-postgres/package.json
+++ b/nodejs/hono-postgres/package.json
@@ -52,6 +52,11 @@
     "prom-client": "^15.1.3",
     "zod": "^4.3.6"
   },
+  "overrides": {
+    "@esbuild-kit/core-utils": {
+      "esbuild": "^0.25.0"
+    }
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/bcrypt": "^6.0.0",
