--- a/nodejs/nestjs-postgres/package.json
+++ b/nodejs/nestjs-postgres/package.json
@@ -70,7 +70,9 @@
     "qs": "^6.14.2",
     "diff": ">=8.0.3",
     "test-exclude": "^7.0.1",
-    "lodash": "^4.17.22"
+    "lodash": "^4.17.22",
+    "serialize-javascript": ">=7.0.3",
+    "ajv": ">=8.17.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
